# tonari

./: .env.example  .gitattributes  .gitignore  LICENSE  LICENSE.ja  README.ja.md  README.md  next.config.js  package-lock.json  package.json
.claude/: CLAUDE.md
.kiro/steering/: product.md  structure.md  tech.md
agentcore/: .dockerignore  Dockerfile  app.py  pyproject.toml
agentcore/skills/aws-cost/: SKILL.md
agentcore/src/: __init__.py
agentcore/src/agent/: __init__.py  aws_cost.py  code_interpreter.py  google_auth.py  google_calendar_tools.py  google_gmail_tools.py  notion_auth.py  notion_tools.py  prompts.py  scensei_agent.py  sub_agent_prompts.py  sub_agents.py  tonari_agent.py  twitter_auth.py  twitter_tools.py
agentcore/tests/: test_build_content_blocks.py  test_tonari_agent.py
backend/: app.py  pyproject.toml
backend/src/: __init__.py
backend/src/agent/: prompts.py  scensei_agent.py
config/: agentcore.json  app.json  infra.json
docs/: aivisspeech-setup.md  architecture.mermaid  backlog.md  ideas.md  plan.md  tools.md
docs/bk/: backlog.md  tech-stack.md
docs/lambda-design/: api-authorizer.md  architecture.md  perfume-crud.md  perfume-search.md  tweet-trigger.md  twitter-read.md  twitter-write.md
docs/lt/: slides.md
docs/phase1/: spec.md
docs/phase3/: spec.md
docs/phase4/: spec.md
docs/phase5/: spec.md
docs/phase6/: spec.md
infra/: cdk.json  package-lock.json  package.json  tsconfig.json
public/: manifest.json  sw.js
scripts/: decrypt-vrm.mjs  decrypt-vrm.sh  generate-icons.mjs  setup-google-calendar.py
src/: middleware.ts
(+303 files in other folders)
